# star-realms

./: .gitignore  Cargo.toml  notes  notes-2
src/: cards.rs  lib.rs  main.rs
src/cl_client/: client.rs  mod.rs  test.rs
src/components/: card.rs  faction.rs  mod.rs
src/game/: mod.rs
star_realms/: Cargo.toml
star_realms/config/: cards.yaml  misc_cards.yaml  test.txt  test.yaml  trade_cards.yaml
star_realms/src/: lib.rs
star_realms/src/game/: actions.rs  card_library.rs  effects.rs  mod.rs  requirements.rs  util.rs
star_realms/src/game/actions/: client_comms.rs  mod.rs
star_realms/src/game/components/: card.rs  faction.rs  mod.rs  stack.rs
star_realms/src/game/components/card/: active_card.rs  details.rs  in_game.rs  mod.rs
star_realms/src/game/effects/: actions.rs  conditions.rs  mod.rs
star_realms/src/parse/: mod.rs
star_realms/src/resources/: cards.rs
