[package]
name = "star_realms"
version = "0.0.0"
authors = ["Veggiebob <veggiebobowman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
yaml-rust = "0.4"
regex = "1.5.4"
ansi_term = "0.12.1"